# internal/controllers/http/banner.go
@@ -12,58 +12,21 @@ import (
 func (r *Router) initBannerURLRoutes(app *gin.RouterGroup) {
 	banners := app.Group("banners")
 	{
-		// @Summary Create a new banner
-		// @Description Create a new banner with the given information
-		// @Tags banners
-		// @Accept  json
-		// @Produce  json
-		// @Param banner body entity.BannerInput true "Banner input"
-		// @Success 200 {object} entity.Banner
-		// @Failure 400 {object} ErrorResponse
-		// @Router /banners/ [post]
 		banners.POST("/", r.CreateBanner)
-
-		// @Summary Get all banners
-		// @Description Retrieve a list of all banners
-		// @Tags banners
-		// @Produce  json
-		// @Success 200 {array} entity.Banner
-		// @Failure 400 {object} ErrorResponse
-		// @Router /banners/ [get]
 		banners.GET("/", r.GetAllBanner)
-
-		// @Summary Get a banner by ID
-		// @Description Retrieve a banner by its ID
-		// @Tags banners
-		// @Produce  json
-		// @Param id path string true "Banner ID"
-		// @Success 200 {object} entity.Banner
-		// @Failure 404 {object} ErrorResponse
-		// @Router /banners/{id} [get]
 		banners.GET("/:id", r.GetBannerById)
-
-		// @Summary Update a banner
-		// @Description Update a banner by its ID
-		// @Tags banners
-		// @Accept  json
-		// @Produce  json
-		// @Param id path string true "Banner ID"
-		// @Param banner body entity.BannerInput true "Banner input"
-		// @Success 200 {object} entity.Banner
-		// @Failure 400 {object} ErrorResponse
-		// @Router /banners/{id} [patch]
 		banners.PATCH("/:id", r.UpdateBanner)
-
-		// @Summary Delete a banner
-		// @Description Delete a banner by its ID
-		// @Tags banners
-		// @Param id path string true "Banner ID"
-		// @Success 200 {object} map[string]string
-		// @Failure 404 {object} ErrorResponse
-		// @Router /banners/{id} [delete]
 		banners.DELETE("/:id", r.DeleteBanner)
 	}
 }
+
+// @Summary Get a banner by ID
+// @Description Retrieve a banner by its ID
+// @Tags banners
+// @Produce  json
+// @Param id path string true "Banner ID"
+// @Success 200 {object} entity.Banner
+// @Router /banners/{id} [get]
 func (r *Router) GetBannerById(c *gin.Context) {
 	// Ambil ID dari parameter URL
 	id := c.Param("id")
@@ -84,6 +47,13 @@ func (r *Router) GetBannerById(c *gin.Context) {
 	banner.Img = serverAddress + banner.Img
 	SendResponse(c, banner, "success")
 }
+
+// @Summary Delete a banner
+// @Description Delete a banner by its ID
+// @Tags banners
+// @Param id path string true "Banner ID"
+// @Success 200 {object} map[string]string
+// @Router /banners/{id} [delete]
 func (r *Router) DeleteBanner(c *gin.Context) {
 	// Ambil ID dari parameter URL
 	id := c.Param("id")
@@ -105,6 +75,17 @@ func (r *Router) DeleteBanner(c *gin.Context) {
 	SendResponse(c, banner, "success")
 }
 
+// @Summary Create a new banner
+// @Description Create a new banner with the given information
+// @Tags banners
+// @Accept multipart/form-data
+// @Produce json
+// @Param title formData string true "title of the banner"
+// @Param slug formData string true "slug of the banner"
+// @Param desc formData string true "desc of the banner"
+// @Param img formData file true "Image file to upload"
+// @Success 200 {object} entity.Banner
+// @Router /banners/ [post]
 func (r *Router) CreateBanner(c *gin.Context) {
 	var req entity.BannerInput
 	if err := c.ShouldBind(&req); err != nil {
@@ -120,6 +101,17 @@ func (r *Router) CreateBanner(c *gin.Context) {
 	SendResponse(c, nil, "success")
 }
 
+// @Summary Get all banners
+// @Description Retrieve a list of all banners
+// @Tags banners
+// @Produce  json
+// @Param limit query string false "limit"
+// @Param offset query string false "offset"
+// @Param order_by query string false "order_by"
+// @Param sort query string false "sort"
+// @Param title query string false "Filter by title"
+// @Success 200 {array} entity.Banner
+// @Router /banners/ [get]
 func (r *Router) GetAllBanner(c *gin.Context) {
 	var filter entity.RequestGetBanner
 	if err := c.ShouldBindQuery(&filter); err != nil {
@@ -179,6 +171,18 @@ func (r *Router) GetAllBanner(c *gin.Context) {
 	SendResponseGetAll(c, banner, "Get all banner", pagination)
 }
 
+// @Summary Update a banner
+// @Description Update a banner by its ID
+// @Tags banners
+// @Accept multipart/form-data
+// @Produce json
+// @Param id path string true "Banner ID"
+// @Param title formData string true "title of the banner"
+// @Param slug formData string true "slug of the banner"
+// @Param desc formData string true "desc of the banner"
+// @Param img formData file true "Image file to upload"
+// @Success 200 {object} entity.Banner
+// @Router /banners/{id} [patch]
 func (r *Router) UpdateBanner(c *gin.Context) {
 	// Ambil ID dari parameter URL
 	id := c.Param("id")
